<resources>
    <string name="app_name">Mvvm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="transaction">Transaction</string>
    <string name="fintrade">FinTrade</string>
    <string name="current_portfolio">Current Portfolio</string>
    <string name="enter_your_username_or_email">Enter your username or email</string>
    <string name="home">Home</string>
    <string name="backup">backup</string>
    <string name="person">person</string>
    <string name="notify">Notify</string>
    <string name="enter_your_user_password">Enter your user password</string>
    <string name="documents">Documents</string>
    <string name="reports">Reports</string>
    <string name="statement">Statement</string>
    <string name="aging">Aging</string>
    <string name="title_activity_docum">DocumActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_rotate">Rotate</string>
    <string name="title_activity_receipt">ReceiptAct</string>
    <string name="title_activity_lending">LendingActivity</string>
    <string name="lending">Lending</string>
    <string name="TOTAL" />
    <string name="total">TOTAL</string>
    <string name="title_object">Object</string>
    <string name="title_activity_data">Activity_data</string>
    <string name="title_activity_fragment_to_fragment">FragmentToFragment</string>
    <string name="title_activity_fragment3">ActivityFragment3</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_main_activity2f">MainActivity2f</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="google_maps_key">map</string>
    <string name="CrearCuenta"><u> Crear Cuenta</u></string>

</resources>