<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ui.LoginActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        />

    <TextView
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="160dp"
        android:layout_marginTop="50dp"
        android:text="Username or Email"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/youremail"
        android:layout_width="match_parent"
        android:maxLines="1"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:ems="15"
        android:inputType="textEmailAddress"
        android:background="@drawable/imput_big"
        android:hint="@string/enter_your_username_or_email"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        />
    <TextView
        android:id="@+id/Password"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="Password"
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/yourpassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:ems="15"
        android:inputType="textPassword"
        android:maxLines="1"
        android:background="@drawable/imput_big"
        android:drawableEnd="@drawable/ic_baseline"
        android:hint="@string/enter_your_user_password"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="69dp"
        android:layout_height="50dp"
        android:layout_marginStart="167dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="19dp"

        android:indeterminate="true"
        android:max="100"
        android:minWidth="200dp"
        android:minHeight="50dp"
        android:progress="0"
        android:visibility="invisible">
    </ProgressBar>



    <Button
        android:id="@+id/logn"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#080F35"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Eres usuario nuevo?"
            android:textSize="19sp"
            android:layout_marginStart="36dp"

            android:clickable="true"
            android:textColor="#000000"
            />

        <TextView
            android:id="@+id/newAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:text="@string/CrearCuenta"
            android:textColor="#6767FF"
            android:textSize="19sp" />
    </LinearLayout>


    <Button
        android:id="@+id/forgt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="45dp"
        android:backgroundTint="#CCD1ED"
        android:text="Forgot username or password"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>