<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#070739"
    tools:context=".Home">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#070739"
        app:menu="@menu/notify"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >
            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/logo"
                android:layout_marginStart="130dp"
                >
            </ImageView>

            <TextView
                android:id="@+id/titlebar"
                android:text="@string/fintrade"
                style="@style/Toolbar.TitleText"
                android:paddingTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"

                />


        </LinearLayout>


    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="0dp"

        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="225dp"
                android:layout_height="45dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/current_portfolio"
                android:textColor="@color/white"
                android:textSize="27sp" >
            </TextView>

            <com.google.android.material.card.MaterialCardView
                app:cardBackgroundColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="550dp"
                android:layout_gravity="center"
                android:layout_marginTop="139dp"
                app:cardElevation="10dp"
                style="@style/CustomCardViewStyle"
                >
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="66dp"
                    >
                    <TextView

                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:text="@string/transaction"
                        android:textColor="@color/black"
                        android:textSize="27sp" />

                    <Button
                        android:id="@+id/forgt"
                        android:layout_weight="0"
                        android:layout_width="50dp"
                        android:background="@drawable/ic_arrow_righ"
                        android:layout_height="50dp"
                        android:textAllCaps="false"
                        />
                </LinearLayout>
                <androidx.cardview.widget.CardView

                    android:layout_width="390dp"
                    android:layout_height="458dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="48dp"
                    android:layout_marginTop="55dp"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="10dp"
                    app:cardUseCompatPadding="true">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/list1"
                        android:layout_width="352dp"
                        android:layout_height="408dp"
                        tools:listitem="@layout/transaction"

                        >


                    </androidx.recyclerview.widget.RecyclerView>
                </androidx.cardview.widget.CardView>

            </com.google.android.material.card.MaterialCardView>
            <androidx.cardview.widget.CardView
                android:backgroundTint="@color/white"
                android:layout_marginTop="100dp"
                android:layout_width="379dp"
                android:layout_height="85dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="15dp"

                >
                <Button
                    android:id="@+id/lend"
                    android:layout_height="wrap_content"
                    android:layout_width="50dp"
                    android:layout_weight="1"
                    android:layout_marginStart="310dp"
                    android:layout_marginTop="17dp"
                    android:background="@drawable/ic_arrow_righ"

                    >

                </Button>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>